maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: '(' expected but identifier found.
      if getIndiction(l,c)!=9999
         ^